--- a/styles/eclipseStyles.module.scss
+++ b/styles/eclipseStyles.module.scss
@@ -5,6 +5,8 @@
         font-size: 6vw;
         font-weight: bold;
         margin-bottom: 1vw;
+        line-height: 4vw;
+        padding-top: 2vw;
     }
 
     p {
@@ -16,7 +18,7 @@
     h2 {
         width: 18vw;
         font-size: 4vw;
-        margin-top: 2vw;
+        padding-top: 2vw;
         padding-bottom: 1vw;
         border-bottom: 2px solid rgb(151, 165, 165);
     }
