--- a/styles/project.module.scss
+++ b/styles/project.module.scss
@@ -2,21 +2,25 @@
     display: flex;
     flex-direction: column;
     // gap: 2%;
-    width: 100vw;
+    // width: 100vw;
 
+    .bbubbu,
+    .eclipse,
+    .youtube {
+        position: relative;
+        top: 5%;
 
-    .text {
-        position: absolute;
-        top: 60%;
-        color: #333;
-        font-size: 12vw;
-    }
+        .text {
+            position: absolute;
+            z-index: 999;
+            bottom: 7vw;
+            right: 7vw;
+            font-size: 2vw;
 
-    .bbubbu {
-        // border: 1px solid red;
-    }
-
-    .eclipse {
-        // border: 1px solid blue;
+            a {
+                text-decoration-line: none;
+                color: white;
+            }
+        }
     }
 }
