--- a/styles/swiper.module.scss
+++ b/styles/swiper.module.scss
@@ -15,7 +15,6 @@
     height: 100%;
     width: 90%;
     margin: 0 auto;
-
     display: flex;
 
 
@@ -32,7 +31,7 @@
 
         &:hover {
             // cursor: url('../public/img/hover2.svg')20 30;
-            cursor: url('../public/img/hover2.svg') 20 30, auto;
+            cursor: url('../public/img/hover3.png') 20 30, auto;
         }
 
     }
